Add sudo configuration for nrpe users for specific path
Change-Id: Ib0a25a13423fa3020f55bfddc831e2b653d4c9ea
Signed-off-by: Timothy Asir <tjeyasin@redhat.com>
Reviewed-on: http://review.gluster.org/7808
Tested-by: Timothy Asir <tim.gluster@gmail.com>
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -97,6 +97,7 @@ AC_CONFIG_FILES([
 	gluster-nagios-addons.spec
 	config/Makefile
 	config/glusternagios.conf
+	config/nrpe
 	plugins/Makefile
 	plugins/nscautils.py
 	plugins/volcap/Makefile
