--- a/config/Makefile.am
+++ b/config/Makefile.am
@@ -8,7 +8,13 @@ nagiosconf_DATA = \
 	nagios_server.conf \
 	$(NULL)
 
+sudodir = $(sysconfdir)/sudoers.d/
+sudo_DATA = \
+	nrpe \
+	$(NULL)
+
 EXTRA_DIST = \
 	$(nagiosconf_DATA) \
 	$(rsyslogconf_DATA) \
+	$(sudo_DATA) \
 	$(NULL)
