--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -178,6 +178,7 @@ fi
 %attr(0755, -, -) %{_sysconfdir}/init.d/glusterpmd
 %{_sysconfdir}/cron.d/gluster-sysstat.crontab
 %{_sysconfdir}/rsyslog.d/glusternagios.conf
+%{_sysconfdir}/sudoers.d/nrpe
 %{_sysconfdir}/nagios/nagios_server.conf
 %{_sysconfdir}/init.d/glusterpmd
 
