Add status information to show disk usage
This will show the status like:
for critical usage:
  CRITICAL: 4% used (4GB out of 100GB):mounts:
        (CRITICAL : <critical list> followed by WARNING
          if any followed by OK

for disk status "WARNING":
  WARNING: 4% used (4GB out of 100GB):mounts:
        (WARNING if any followed by OK

for disk status "OK":
  OK: 4% used (4GB out of 100GB):mounts:(<mounts>)

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1081495
Change-Id: I9dbda7a5d6ea992ba73acce2174e6d66f2e16066
Signed-off-by: Timothy Asir <tjeyasin@redhat.com>
Reviewed-on: http://review.gluster.org/7936
Tested-by: Timothy Asir <tim.gluster@gmail.com>
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/config/nrpe.in
+++ b/config/nrpe.in
@@ -1,4 +1,5 @@
 Cmnd_Alias NRPE_PATHS = @sbindir@/send_nsca, \
+    @libdir@/nagios/plugins/gluster/check_disk_and_inode.py, \
     @libdir@/nagios/plugins/gluster/check_vol_utilization.py, \
     @libdir@/nagios/plugins/gluster/check_volume_status.py, \
     @libdir@/nagios/plugins/gluster/check_gluster_proc_status.py, \
