plugins: nrpe plugin to check volumes with server quorum
Added a plugin to check if any volume in the cluster has
the server side quorum turned on

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1106421
Change-Id: I897aedd737a622832548e7470e8f3cf9fb7dbc2c
Signed-off-by: Sahina Bose <sabose@redhat.com>
Reviewed-on: http://review.gluster.org/8016
Reviewed-by: darshan n <dnarayan@redhat.com>
Reviewed-by: Ramesh N <rnachimu@redhat.com>

--- a/config/nrpe.in
+++ b/config/nrpe.in
@@ -3,6 +3,7 @@ Cmnd_Alias NRPE_PATHS = @sbindir@/send_nsca, \
     @libdir@/nagios/plugins/gluster/check_vol_utilization.py, \
     @libdir@/nagios/plugins/gluster/check_volume_status.py, \
     @libdir@/nagios/plugins/gluster/check_gluster_proc_status.py, \
+    @libdir@/nagios/plugins/gluster/check_quorum_status.py, \
     @libdir@/nagios/plugins/gluster/discoverpeers.py, \
     @libdir@/nagios/plugins/gluster/discover_volumes.py, \
     @libdir@/nagios/plugins/gluster/discoverhostparams.py, \
