--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -11,6 +11,7 @@ crond_DATA = \
 dist_glusternagiosplugins_PYTHON = \
 	check_gluster_syslog.py \
 	check_mounts.py \
+	check_quorum_status.py \
 	check_vol_utilization.py \
 	check_volume_status.py \
 	check_proc_status.py \
