build: fixing make file issue in volcap
 Not distributing capacity.so in src rpms.

Bug-Url: https://bugzilla.redhat.com/1104183
Change-Id: I9eca10f9aa1fea290026a7f3f3220ff96142e5d8
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>
Reviewed-on: http://review.gluster.org/8026
Reviewed-by: Bala FA <barumuga@redhat.com>
Reviewed-by: Kanagaraj M <kmayilsa@redhat.com>
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/plugins/volcap/Makefile.am
+++ b/plugins/volcap/Makefile.am
@@ -1,5 +1,5 @@
 
-dist_glusternagiosplugins_PYTHON = \
+nodist_glusternagiosplugins_PYTHON = \
 	capacity.so \
 	$(NULL)
 
@@ -9,13 +9,11 @@ capacity.so: volCap.c setup.py
 all-local: capacity.so
 
 EXTRA_DIST = \
-	$(NULL)
-
-EXTRA_DIST = \
 	__init__.py \
-	volCap.c \
+	setup.py \
 	tests.py \
-	setup.py
+	volCap.c \
+	$(NULL)
 
 CLEANFILES = \
 	volcap.o \
