nagios-addons: Using ctypes to call gfapi
  Removing the volCap.c which was used to call
libgfapi and calling libgfapi directly from python using
ctypes.

Change-Id: Ia78f212c769c34e5cb991e429623946a4256e2af
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>
Reviewed-on: http://review.gluster.org/8090
Reviewed-by: Sahina Bose <sabose@redhat.com>
Reviewed-by: Bala FA <barumuga@redhat.com>

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,7 +1,3 @@
-SUBDIRS = \
-	volcap \
-	$(NULL)
-
 initdir = $(sysconfdir)/init.d
 init_DATA = \
 	glusterpmd \
@@ -26,6 +22,7 @@ dist_glusternagiosplugins_PYTHON = \
 	check_gluster_proc_status.py \
 	check_proc_util.py \
 	__init__.py \
+	gfapi.py \
 	memory.py \
 	network.py \
 	nscautils.py \
