ckaging: Avoid overwriting config files during upgrade.
  Adding %config(noreplace) flag for config files so that config
files will not be overwritten during RPM upgarde.

Change-Id: I9e78e9a8b109018a9db65853b55943c8ce9454ca
Bug-Url: https://bugzilla.redhat.com/1107997
Signed-off-by: Ramesh Nachimuthu <rnachimu@redhat.com>
Reviewed-on: http://review.gluster.org/8221
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -172,7 +172,7 @@ fi
 %{_sysconfdir}/cron.d/gluster-sysstat.crontab
 %{_sysconfdir}/rsyslog.d/glusternagios.conf
 %{_sysconfdir}/sudoers.d/nrpe
-%{_sysconfdir}/nagios/nagios_server.conf
+%config(noreplace) %{_sysconfdir}/nagios/nagios_server.conf
 %{_sysconfdir}/init.d/glusterpmd
 
 %files tests
