nagios-plugins: Disabled push notification for quota alerts
Disable the quota push notification using NSCA as this only
supports soft-limit alerts and overrides the existing
hard limit alerts.
The poll based NRPE status check for quota is sufficient
for now.

Change-Id: I8203f27fa66c47b1c725819816e326cd6ee13331
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1119717
Signed-off-by: Sahina Bose <sabose@redhat.com>
Reviewed-on: http://review.gluster.org/8314
Reviewed-by: Kanagaraj M <kmayilsa@redhat.com>
Reviewed-by: Shubhendu Tripathi <shtripat@redhat.com>

--- a/config/glusternagios.conf.in
+++ b/config/glusternagios.conf.in
@@ -8,7 +8,7 @@ $actionomprogbinary @glusternagiospluginsdir@/check_gluster_syslog.py
 #
 $template GLFS_NAG_Template,"%msgid%/%syslogfacility-text:::uppercase%/%syslogseverity-text:::uppercase%/%app-name:::uppercase% [%TIMESTAMP:::date-rfc3339%] %msg:::sp-if-no-1st-sp%%msg:::drop-last-lf%\n"
 
-if (($msg contains 'quorum' or $msg contains 'quota_log_usage') and not ($msg contains '@cee')) then :omprog:;GLFS_NAG_Template
+if (($msg contains 'quorum') and not ($msg contains '@cee')) then :omprog:;GLFS_NAG_Template
 
 
 #
