nagios-plugins: Monitor selected mount points.
Disk utilization plugin will monitor only the following
mount points: / , /boot , /home , /var , /usr. This
is done to avoid duplication of monitoring brick
mount points.

Change-Id: I1e14c5bb18384492a3110f86a23c1102e3e9a3ac
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1135983
Signed-off-by: ndarshan <dnarayan@redhat.com>
Reviewed-on: http://review.gluster.org/9673
Reviewed-by: Sahina Bose <sabose@redhat.com>

--- a/gluster-nagios-addons.spec.in
+++ b/gluster-nagios-addons.spec.in
@@ -132,7 +132,7 @@ fi
 
 cat >> %{_sysconfdir}/nagios/nrpe.cfg <<EOF
 %{_start_conf_section}
-command[check_disk_and_inode]=sudo %{_libdir}/nagios/plugins/gluster/check_mounts.py -w 80 -c 90
+command[check_disk_and_inode]=sudo %{_libdir}/nagios/plugins/gluster/check_mounts.py -w 80 -c 90 -i / -i /boot -i /home -i /var -i /usr
 command[check_memory]=%{_libdir}/nagios/plugins/gluster/memory.py -w 80 -c 90 -t 2
 command[check_swap_usage]=%{_libdir}/nagios/plugins/gluster/swap.py -w 80 -c 90 -t 2
 command[check_cpu_multicore]=%{_libdir}/nagios/plugins/gluster/cpu.py -w 80 -c 90 -t 2
